--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Created by https://www.gitignore.io/api/django
+
+### Django ###
+*.log
+*.pot
 *.pyc
-/static
+__pycache__/
 local_settings.py
+db.sqlite3
+db.sqlite3-journal
+/media
+/static
+
